@@ -1,3 +1,9 @@
+2011-12-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* ser_posix.c (baud_lookup_table): Conditionalize the inclusion of
+	non-standard baud rates (only baud rates up to B38400 are
+	standardized by the Single UNIX Specification).
+
 2011-12-29  Rene Liebscher <R.Liebscher@gmx.de>
 
 	bug #34302: Feature request : device configuration with parent classes
